Bug 153821 crash while inspecting an error window [@inLayoutUtils::GetPresShellFor] r=caillon sr=bz